--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         Aprenda as melhores práticas de cuidado, gestão e marketing para se destacar no mercado de pet sitting e conquistar clientes fiéis.
                     </p>
                     <!-- ATENÇÃO: Substitua 'SEU_LINK_AQUI' pelo seu link de checkout da Kiwify -->
-                    <a href="https://kiwify.app/Po2YThk" target="_blank" class="inline-block bg-gold text-gray-900 font-bold text-lg px-8 py-4 rounded-lg shadow-lg hover:bg-gold-dark transition-colors duration-300">
+                    <a href=https://pay.kiwify.com.br/JIKxf1f target="_blank" class="inline-block bg-gold text-gray-900 font-bold text-lg px-8 py-4 rounded-lg shadow-lg hover:bg-gold-dark transition-colors duration-300">
                         QUERO SER UM PET SITTER PRO
                     </a>
                 </div>
