--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         Aprenda as melhores práticas de cuidado, gestão e marketing para se destacar no mercado de pet sitting e conquistar clientes fiéis.
                     </p>
                     <!-- ATENÇÃO: Substitua 'SEU_LINK_AQUI' pelo seu link de checkout da Kiwify -->
-                    <a href=https://pay.kiwify.com.br/JIKxf1f target="_blank" class="inline-block bg-gold text-gray-900 font-bold text-lg px-8 py-4 rounded-lg shadow-lg hover:bg-gold-dark transition-colors duration-300">
+                    <a href="https://pay.kiwify.com.br/JIKxf1f" target="_blank" class="inline-block bg-gold text-gray-900 font-bold text-lg px-8 py-4 rounded-lg shadow-lg hover:bg-gold-dark transition-colors duration-300">
                         QUERO SER UM PET SITTER PRO
                     </a>
                 </div>
@@ -108,7 +108,7 @@
                 <div class="text-center mt-8 md:mt-0">
                      <p class="text-lg text-gray-300 mb-6">Chega de se sentir perdido! Tenha um mapa claro para o sucesso.</p>
                      <!-- ATENÇÃO: Substitua 'SEU_LINK_AQUI' pelo seu link de checkout da Kiwify -->
-                     <a href="https://pay.kiwify.com.br/SEU_LINK_AQUI" target="_blank" class="inline-block bg-gold text-gray-900 font-bold text-lg px-8 py-4 rounded-lg shadow-lg hover:bg-gold-dark transition-colors duration-300">
+                     <a href="https://pay.kiwify.com.br/JIKxf1f" target="_blank" class="inline-block bg-gold text-gray-900 font-bold text-lg px-8 py-4 rounded-lg shadow-lg hover:bg-gold-dark transition-colors duration-300">
                         QUERO CONHECER A MENTORIA
                     </a>
                 </div>
@@ -128,11 +128,11 @@
                     <h2 class="text-3xl md:text-4xl font-bold mb-4">Conheça seu Mentor</h2>
                     <p class="text-gray-400 mb-4">
                         <!-- Coloque aqui um resumo da sua história. -->
-                        Olá! Eu sou o Maurício e, assim como você, sou apaixonado por animais. Após [X anos] de experiência, cuidando de mais de [número] pets e construindo meu próprio negócio de sucesso do zero, decidi criar esta mentoria. Meu objetivo é simples: encurtar o seu caminho, evitando os erros que cometi e te dando as ferramentas exatas para você prosperar fazendo o que ama.
+                        Olá! Eu sou o Maurício e, assim como você, sou apaixonado por animais. Após 12 anos de experiência, cuidando de mais de 300 pets e construindo meu próprio negócio de sucesso do zero, decidi criar esta mentoria. Meu objetivo é simples: encurtar o seu caminho, evitando os erros que cometi e te dando as ferramentas exatas para você prosperar fazendo o que ama.
                     </p>
                     <p class="text-gray-300 font-semibold">
                         <!-- Adicione suas credenciais -->
-                        Sua credencial aqui (ex: Pet Sitter Profissional)
+                        Sua credencial aqui MAH Pet Sitter Profissional
                     </p>
                 </div>
             </div>
@@ -210,7 +210,7 @@
                 </div>
                 
                 <!-- ATENÇÃO: Substitua 'SEU_LINK_AQUI' pelo seu link de checkout da Kiwify -->
-                <a href="https://pay.kiwify.com.br/SEU_LINK_AQUI" target="_blank" class="w-full block bg-gold text-gray-900 font-bold text-xl px-8 py-5 rounded-lg shadow-lg hover:bg-gold-dark transition-colors duration-300">
+                <a href="https://pay.kiwify.com.br/JIKxf1f" target="_blank" class="w-full block bg-gold text-gray-900 font-bold text-xl px-8 py-5 rounded-lg shadow-lg hover:bg-gold-dark transition-colors duration-300">
                     SIM, QUERO GARANTIR MINHA VAGA!
                 </a>
                 
