--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     </p>
                     <p class="text-gray-300 font-semibold">
                         <!-- Adicione suas credenciais -->
-                        Sua credencial aqui MAH Pet Sitter Profissional
+                        MAH Pet Sitter Profissional
                     </p>
                 </div>
             </div>
@@ -254,7 +254,7 @@
                         <span class="faq-icon text-2xl text-gold">+</span>
                     </button>
                     <div class="faq-answer max-h-0 overflow-hidden transition-all duration-500">
-                        <p class="p-6 pt-0 text-gray-400">O acesso aos módulos gravados da mentoria é vitalício! Você poderá ver e rever as aulas quantas vezes quiser, para sempre, incluindo todas as futuras atualizações.</p>
+                        <p class="p-6 pt-0 text-gray-400">O acesso aos módulos gravados da mentoria por 1 ANO. Você poderá ver e rever as aulas quantas vezes quiser, durante esse período, incluindo todas as futuras atualizações.</p>
                     </div>
                 </div>
                  <!-- FAQ Item 4 -->
