--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 </div>
 
                 <div class="my-8">
-                    <p class="text-gray-400 line-through">De R$997,00</p>
+                    <p class="text-red-400 line-through">De R$997,00</p>
                     <p class="text-5xl font-bold text-gold">Por apenas 12x de R$49,90</p>
                     <p class="text-gray-400">ou R$497,00 à vista</p>
                 </div>
@@ -275,7 +275,7 @@
     <footer class="bg-gray-800 py-8">
         <div class="container mx-auto px-6 text-center text-gray-400">
             <p>&copy; 2025 Pet Sitter Pro. Todos os direitos reservados.</p>
-            <p class="text-sm mt-2">Desenvolvido por [Seu Nome ou Sua Empresa]</p>
+            <p class="text-sm mt-2">Desenvolvido por Mauricio Henrique Andrade</p>
         </div>
     </footer>
 
